Fix "Terms and Conditions" checkbox spacing

--- a/css/compat/themes/compat-fennik-319.css
+++ b/css/compat/themes/compat-fennik-319.css
@@ -11,6 +11,10 @@ body.theme-fennik div.woocommerce .fc-wrapper .fc-coupon_code__collapsible .fc-c
   padding-bottom: 0;
 }
 
+body.theme-fennik .fc-wrapper .woocommerce-terms-and-conditions-wrapper .woocommerce-privacy-policy-text {
+  margin: 0;
+}
+
 body.theme-fennik .select2-container--default .select2-selection--single .select2-selection__rendered {
   margin-top: 0;
 }
